examples/quick-install-walkthroughs/aws/tercen-stage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tercen-stage-deployment
  namespace: default
  labels:
    app: tercen-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tercen-stage
  template:
    metadata:
      labels:
        app: tercen-stage
    spec:
      containers:
        - name: tercen-stage
          image: tercen/tercen:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5400
              name: tercen-stage
          volumeMounts:
            - name: tercen-config
              mountPath: /etc/tercen
            - name: tercen-data
              mountPath: /var/lib/tercen/data
              readOnly: false
            - name: dockersock
              mountPath: /var/run/docker.sock
      volumes:
        - name: tercen-data
          persistentVolumeClaim:
            claimName: tercen-stage-pv-claim
        - name: tercen-config
          configMap:
            name: tercen-staging-config
        - name: dockersock
          hostPath:
            path: /var/run/docker.sock
      restartPolicy: Always
